# appfollow_test

./: .gitignore  LICENSE  README.md  docker-compose.yml
api/: Dockerfile  Pipfile  app.py  db.py  factories.py  schemas.py  settings.py  tests.py
async_api/: Dockerfile  app.py  db.py  pyproject.toml  schemas.py  settings.py  utils.py
scraper/: Dockerfile  Pipfile  db.py  main.py  nameko_config.yml  parser.py  services.py  settings.py
scraper/tests/: test_db.py  test_page.html  test_parser.py  test_service.py
