[tool.poetry]
name = "async_api"
version = "0.1.0"
description = ""
authors = ["Victor Luzgin <luzgin.st@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6"
motor = "^2.0"
marshmallow = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
